# cuda-driver

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
benches/cub/: Cargo.toml
benches/cublas/: Cargo.toml  wrapper.h
benches/cublas/src/: handle.rs  lib.rs  mat_mul.rs  matrix.rs  multiply.rs
benches/cublas/src/test/: bench.rs  device_blob.rs  mod.rs  verify.rs
cub/: Cargo.toml
cub/src/: bench.rs  lib.rs  verify.rs
cub/src/reduce_mean/: bench.rs  mod.rs  verify.rs
cub/src/rms_normalization/: mod.rs
cub/src/softmax/: bench.rs  mod.rs
cub/src/templates/: fused_softmax.cuh  reduce_mean.cuh  rms_normalization.cuh  softmax_bench.cuh
cublas/: Cargo.toml  build.rs  wrapper_maca.h
cublas/src/: cublas.rs  cublaslt.rs  handle.rs  lib.rs  matrix.rs
cublas/src/blas/: mod.rs  param.rs  test.rs
cublas/src/cublaslt/: matrix.rs  mod.rs  multiply.rs  test.rs
cublas/src/test/: bench.rs  mod.rs  verify.rs
cuda/: CHANGELOG.md  Cargo.toml  README.md  build.rs  wrapper.h  wrapper_maca.h
cuda-cc/: Cargo.toml
cuda-cc/src/: lib.rs
cuda/src/: context.rs  data_type.rs  dev_mem.rs  device.rs  event.rs  graph.rs  host_mem.rs  launch.rs  lib.rs  managed_mem.rs  memory.rs  nvrtc.rs  spore.rs  stream.rs  vir_mem.rs  virtual_mem.rs
cuda/src/graph/: free.rs  host_fn.rs  kernel.rs  kernel_node.rs  malloc.rs  memcpy.rs  memset.rs  mod.rs
cuda/src/nvrtc/: kernel_fn.rs  mod.rs  module.rs  ptx.rs  rtc.rs
cutlass-bench/: Cargo.toml  build.rs
cutlass-bench/src/: .clang-format  cutlass_rotary_embedding.cuh  lib.rs  main.rs  rotary_embedding.cuh  vector_add.cuh
cutlass-bench/src/rotary_embedding/: cuda_c.cuh  cutlass.cuh  mod.rs
cutlass-bench/src/vector_add/: cutlass.cuh  mod.rs
example/: Cargo.toml  README.md
example/src/: blob.rs  gguf.rs  loader.rs  main.rs
example/src/nn/: activation.rs  attention.rs  embedding.rs  ffn.rs  linear.rs  linear_residual.rs  llama.rs  mod.rs  normalization.rs  rope.rs  self_attn.rs  transformer.rs
llama-cu/: Cargo.toml  build.rs
llama-cu/src/: blob.rs  exec.rs  fmt.rs  gguf.rs  llama.rs  loader.rs  macros.rs  main.rs  range_collector.rs
llama-cu/src/op/: attention_kv.rs  embedding.cuh  embedding.rs  linear.rs  mod.rs  rms_norm.cuh  rms_norm.rs  rope.cuh  rope.rs  swiglu.cuh  swiglu.rs
llama-cu/src/op/attention_kv-c/: attention_kv.c  attention_kv.h  attention_kv_nh_64.c  attention_kv_nh_64.h  ninetoothed.h
nccl/: Cargo.toml  build.rs  wrapper.h  wrapper_maca.h
nccl/src/: all_gather.rs  all_reduce.rs  broadcast.rs  communicator.rs  group.rs  lib.rs
nn/: Cargo.toml
nn/src/: arg.rs  dim.rs  graph.rs  lib.rs
nn/src/ctx/: graph.rs  internal.rs  mod.rs  nn_ctx.rs  tensor.rs
nn/src/nn/: activation.rs  attention.rs  embedding.rs  linear.rs  llama.rs  mlp.rs  mod.rs  normalization.rs  transformer_blk.rs
nn/src/op/: activation.rs  attention.rs  embedding.rs  linear.rs  mod.rs  normalization.rs  rope.rs  split.rs
search-corex-tools/: Cargo.toml
search-corex-tools/src/: lib.rs
search-cuda-tools/: Cargo.toml
search-cuda-tools/src/: lib.rs
search-maca-tools/: Cargo.toml
search-maca-tools/src/: lib.rs
test-utils/: Cargo.toml
test-utils/src/: lib.rs
transformer/: Cargo.toml
transformer-cuda/: Cargo.toml  build.rs
transformer-cuda/src/: lib.rs
transformer-cuda/src/fused_softmax/: bench.rs  verify.rs
transformer-cuda/src/gather/: mod.rs
transformer-cuda/src/templates/: fused_softmax.cuh  gather.cuh  rms_normalization.cuh  softmax_bench.cuh
transformer/src/: fused_softmax.rs  lib.rs
try-cuda/: Cargo.toml  build.rs
try-cuda/src/: basic.cu  main.rs  transpose.cu
