[package]
name = "cub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cuda = { path = "../cuda" }

[dev-dependencies]
rand = "0.8"
test-utils = { path = "../test-utils" }

[build-dependencies]
find_cuda_helper = "0.2"
