[package]
name = "cublas"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cuda.path = "../cuda"
half.workspace = true

[build-dependencies]
bindgen.workspace = true
build-script-cfg.workspace = true
search-cuda-tools.path = "../search-cuda-tools"

[dev-dependencies]
rand = "0.8"
