[package]
name = "cuda"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
context-spore = "0.0"
half.workspace = true
find_cuda_helper.workspace = true
log = "0.4"

[build-dependencies]
bindgen.workspace = true
build-script-cfg.workspace = true
find_cuda_helper.workspace = true
search-corex-tools.path = "../search-corex-tools"

[dev-dependencies]
rand = "0.8"
