[package]
name = "cuda"
version = "0.0.0"
edition.workspace = true
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
context-spore = "0.1"
half.workspace = true
find_cuda_helper.workspace = true
log = "0.4"
search-corex-tools.path = "../search-corex-tools"
lazy_static = "1.5.0"

[build-dependencies]
bindgen.workspace = true
build-script-cfg.workspace = true
find_cuda_helper.workspace = true
search-corex-tools.path = "../search-corex-tools"

[dev-dependencies]
rand = "0.9"
