[package]
name = "cutlass-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cuda = { path = "../cuda" }
half = "2.4"

[build-dependencies]
build-script-cfg.workspace = true
search-cuda-tools = { path = "../search-cuda-tools" }
