[package]
name = "example"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
cuda.path = "../cuda"
cublas.path = "../cublas"
memmap2 = "0.9"
ggus = { git = "https://github.com/InfiniTensor/gguf", rev = "23c362f" }
tensor = { git = "https://github.com/YdrMaster/tensor", rev = "66450a9" }
rwrc = { git = "https://github.com/YdrMaster/rwrc", rev = "3969558" }
