[package]
name = "nccl"
version = "0.0.0"
edition.workspace = true
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cuda.path = "../cuda"
digit-layout = "0.3"

[build-dependencies]
bindgen.workspace = true
build-script-cfg.workspace = true
search-cuda-tools.path = "../search-cuda-tools"
search-corex-tools.path = "../search-corex-tools"
