[package]
name = "transformer-cuda"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cuda = { path = "../cuda" }

[dev-dependencies]
rand = "0.8"
transformer = { path = "../transformer" }
test-utils = { path = "../test-utils" }

[build-dependencies]
find_cuda_helper = "0.2"
