[package]
name = "cublas-bench"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
cuda = { path = "../../cuda" }

[build-dependencies]
bindgen = "0.69"
find_cuda_helper = "0.2"
